--- a/in.css
+++ b/in.css
@@ -7,13 +7,10 @@
     position: relative;
     background-image: url("/src/wallpaperflare.com_wallpaper.jpg");
     background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center center;
+    background-size: cover;
+    background-position: center center;
     height: 750px;
-    z-index: -1;
-
-    
-
+    z-index: 0;
 }
 .intro::before {
     content: "";
@@ -22,13 +19,13 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Adjust the alpha value (last parameter) for the darkness */
+    background-color: rgba(0, 0, 0, 0.296); /* Adjust the alpha value (last parameter) for the darkness */
     z-index: -1;
 }
 
 .index{
-    background-color: rgba(87, 87, 87, 0.25);
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.241);
+    background-color: rgba(0, 0, 0, 0.291);
+    /* box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.241); */
 }
 .logo{
     /* border: solid black; */
@@ -41,6 +38,25 @@
     font-weight: 700;
 }
 .nav{
-    /* border: solid black; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
 
+}
+.nav a{
+    padding: 20px;
+}
+.cont{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15vw;
+
+}
+.cont p{
+    font-size: 50px;
+    font-weight: 900;
+    color: rgb(158, 158, 158);
+    text-align: center;
 }
