--- a/in.css
+++ b/in.css
@@ -5,7 +5,7 @@
 }
 .intro{
     position: relative;
-    background-image: url("/src/wallpaperflare.com_wallpaper.jpg");
+    background-image: url("wallpaperflare.com_wallpaper.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
